--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <dependency.java-manta.version>2.4.0-SNAPSHOT</dependency.java-manta.version>
         <dependency.testng.version>6.9.9</dependency.testng.version>
         <dependency.hadoop.version>2.7.2</dependency.hadoop.version>
+        <dependency.mockito.version>2.0.2-beta</dependency.mockito.version>
 
         <!-- Plugin versions -->
         <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
@@ -118,6 +119,13 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${dependency.mockito.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
