--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.joyent.manta</groupId>
     <artifactId>hadoop-manta</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <licenses>
         <license>
@@ -28,7 +26,7 @@
         <connection>scm:git:git://github.com/joyent/hadoop-manta.git</connection>
         <developerConnection>scm:git:git://github.com/joyent/hadoop-manta.git</developerConnection>
         <url>git@github.com:joyent/hadoop-manta.git</url>
-        <tag>HEAD</tag>
+        <tag>hadoop-manta-1.0.0</tag>
     </scm>
     <issueManagement>
         <system>github.com</system>
