--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.joyent.manta</groupId>
     <artifactId>hadoop-manta</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <licenses>
         <license>
@@ -12,6 +12,10 @@
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
+
+    <name>hadoop-manta</name>
+    <description>Hadoop Filesystem Driver for Manta</description>
+    <url>https://github.com/joyent/hadoop-manta</url>
 
     <developers>
         <developer>
