--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.joyent.manta</groupId>
     <artifactId>hadoop-manta</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <licenses>
         <license>
@@ -30,7 +30,7 @@
         <connection>scm:git:git://github.com/joyent/hadoop-manta.git</connection>
         <developerConnection>scm:git:git://github.com/joyent/hadoop-manta.git</developerConnection>
         <url>git@github.com:joyent/hadoop-manta.git</url>
-        <tag>hadoop-manta-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
     <issueManagement>
         <system>github.com</system>
